--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,37 @@
     />
   </head>
   <body>
+    <header class="header" data-header>
+      <div class="container">
+        <a href="#" class="logo">
+          <img
+            src="./assets/img/logo.svg"
+            alt="Landio Logo"
+            class="logo__img"
+          />
+        </a>
+
+        <button class="menu-icon" data-nav-toggle-btn>
+          <ion-icon name="menu-outline"></ion-icon>
+        </button>
+
+        <nav class="navbar">
+          <ol class="navbar__list">
+            <li><a href="#hero" class="navbar__link">Home</a></li>
+            <li><a href="#features" class="navbar__link">Features</a></li>
+            <li><a href="#pricing" class="navbar__link">Pricing</a></li>
+            <li><a href="#blog" class="navbar__link">Blog</a></li>
+            <li><a href="#contact" class="navbar__link">Contact Us</a></li>
+          </ol>
+        </nav>
+
+        <div class="header-actions">
+          <a href="#" class="header-actions__link">Log In</a>
+          <a href="#" class="header-actions__link">Register</a>
+        </div>
+      </div>
+    </header>
+
     <script src="./script.js"></script>
 
     <!--Ionicon-->
