add hero section

--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,38 @@
       </div>
     </header>
 
+    <main>
+      <article>
+        <section class="hero" id="hero">
+          <div class="container">
+            <div class="hero-content">
+              <h1 class="h1 hero-title">Creative Landing Page</h1>
+
+              <p class="hero-text">
+                A creative & modern landing page with Landio template & We love
+                make things amazing.
+              </p>
+
+              <p class="form-text">
+                <span>🥳</span>Nemo enim ipsam voluptatem quia voluptas sit
+                aspernatur that is fugit.
+              </p>
+
+              <form action="" class="hero-form">
+                <input
+                  type="email"
+                  name="email"
+                  class="email-field"
+                  placeholder="Enter Your Email"
+                />
+                <button type="submit" class="btn btn-primary">Subscribe</button>
+              </form>
+            </div>
+          </div>
+        </section>
+      </article>
+    </main>
+
     <script src="./script.js"></script>
 
     <!--Ionicon-->
