add hero banner

--- a/src/index.html
+++ b/src/index.html
@@ -80,6 +80,10 @@
                 <button type="submit" class="btn btn-primary">Subscribe</button>
               </form>
             </div>
+
+            <figure class="hero-banner">
+              <img src="./assets/img/hero-banner.png" alt="hero image" />
+            </figure>
           </div>
         </section>
       </article>
