finish hero section

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,11 @@
             </div>
 
             <figure class="hero-banner">
-              <img src="./assets/img/hero-banner.png" alt="hero image" />
+              <img
+                src="./assets/img/hero-banner.png"
+                alt="hero image"
+                class="hero-banner_img"
+              />
             </figure>
           </div>
         </section>
