--- a/src/index.html
+++ b/src/index.html
@@ -153,10 +153,10 @@
               <li>
                 <div class="about-card">
                   <div class="card-icon">
-                    <ion-icon name="thumbs-up"></ion-icon>
+                    <ion-icon name="server"></ion-icon>
                   </div>
 
-                  <h3 class="h3 card-title">Easy To Use</h3>
+                  <h3 class="h3 card-title">Data Privacy</h3>
                   <p class="card-text">
                     Sed ut perspiciatis unde omnis iste natus error sit
                     voluptatem.
