style about content

--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,7 @@
           <div class="container">
             <div class="about-content">
               <div class="about-icon">
-                <ion-icon name="thumbs-up"></ion-icon>
+                <ion-icon name="cube"></ion-icon>
               </div>
 
               <h2 class="about-title">Why Choose Us?</h2>
