--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
           </div>
         </section>
 
-        <section class="about">
+        <section class="about" id="about">
           <div class="container">
             <div class="about-content">
               <div class="about-icon">
@@ -164,6 +164,53 @@
                 </div>
               </li>
             </ul>
+          </div>
+        </section>
+
+        <section class="features" id="features">
+          <div class="container">
+            <h2 class="h2 section-title">Awesome Features</h2>
+            <p class="section-text">
+              Et harum quidem rerum facilis est et expedita distinctio nam
+              libero tempore cum soluta nobis eligendi cumque.
+            </p>
+            <div class="features-wrapper">
+              <figure class="features-banner">
+                <img
+                  src="./assets/img/features-img-1.png"
+                  alt="illustration art"
+                />
+              </figure>
+
+              <div class="features-content">
+                <p class="features-content-subtitle">
+                  <ion-icon name="sparkles"></ion-icon>
+
+                  <span>CREATIVE FEATURES</span>
+                </p>
+                <h3 class="features-content-title">
+                  Build <strong>community</strong> &
+                  <strong>conversion</strong> with our suite of
+                  <strong>social tool</strong>
+                </h3>
+
+                <p class="features-content-text">
+                  Temporibus autem quibusdam et aut officiis debitis aut rerum a
+                  necessitatibus saepe eveniet ut et voluptates repudiandae sint
+                  molestiae non recusandae itaque.
+                </p>
+                <ul class="features-list">
+                  <li class="features-list-item">
+                    <ion-icon name="layers-outline"></ion-icon>
+                    <p>Donec pede justo fringilla vel nec.</p>
+                  </li>
+                  <li class="features-list-item">
+                    <ion-icon name="megaphone-outline"></ion-icon>
+                    <p>Cras ultricies mi eu turpis hendrerit fringilla.</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
         </section>
       </article>
