--- a/src/index.html
+++ b/src/index.html
@@ -209,6 +209,52 @@
                     <p>Cras ultricies mi eu turpis hendrerit fringilla.</p>
                   </li>
                 </ul>
+
+                <div class="btn-group">
+                  <button class="btn btn-primary">Read More</button>
+                  <button class="btn btn-secondary">Buy Now</button>
+                </div>
+              </div>
+            </div>
+            <div class="features-wrapper">
+              <figure class="features-banner">
+                <img
+                  src="./assets/img/features-img-2.png"
+                  alt="illustration art"
+                />
+              </figure>
+
+              <div class="features-content">
+                <p class="features-content-subtitle">
+                  <ion-icon name="sparkles"></ion-icon>
+
+                  <span>CREATIVE FEATURES</span>
+                </p>
+                <h3 class="features-content-title">
+                  We do the work you <strong>stay focused</strong> on
+                  <strong>your customers.</strong>
+                </h3>
+
+                <p class="features-content-text">
+                  Temporibus autem quibusdam et aut officiis debitis aut rerum a
+                  necessitatibus saepe eveniet ut et voluptates repudiandae sint
+                  molestiae non recusandae itaque.
+                </p>
+                <ul class="features-list">
+                  <li class="features-list-item">
+                    <ion-icon name="rocket-outline"></ion-icon>
+                    <p>Donec pede justo fringilla vel nec.</p>
+                  </li>
+                  <li class="features-list-item">
+                    <ion-icon name="wifi-outline"></ion-icon>
+                    <p>Cras ultricies mi eu turpis hendrerit fringilla.</p>
+                  </li>
+                </ul>
+
+                <div class="btn-group">
+                  <button class="btn btn-primary">Read More</button>
+                  <button class="btn btn-secondary">Buy Now</button>
+                </div>
               </div>
             </div>
           </div>
