--- a/src/index.html
+++ b/src/index.html
@@ -376,6 +376,96 @@
             </ul>
           </div>
         </section>
+
+        <section class="contact" id="contact">
+          <div class="container">
+            <h2 class="h2 section-title">Contact Us</h2>
+
+            <p class="section-text">
+              Et harum quidem rerum facilis est et expedita distinctio nam
+              libero tempore cum soluta nobis eligendi cumque.
+            </p>
+
+            <div class="contact-wrapper">
+              <form action="" class="contact-form">
+                <div class="wrapper-flex">
+                  <div class="input-wrapper">
+                    <label for="name">Name*</label>
+                    <input
+                      type="text"
+                      name="name"
+                      id="name"
+                      required
+                      placeholder="Enter Your Name"
+                      class="input-field"
+                    />
+                  </div>
+
+                  <div class="input-wrapper">
+                    <label for="email">Email*</label>
+                    <input
+                      type="text"
+                      name="email"
+                      id="email"
+                      required
+                      placeholder="Enter Your Email"
+                      class="input-field"
+                    />
+                  </div>
+                </div>
+
+                <label for="message">Message*</label>
+                <textarea
+                  name="message"
+                  id="message"
+                  class="input-field"
+                  required
+                ></textarea>
+
+                <button type="submit" class="btn btn-primary">
+                  <span>Send Message</span>
+
+                  <ion-icon name="paper-plane-outline"></ion-icon>
+                </button>
+              </form>
+
+              <ul class="contact-list">
+                <li>
+                  <a href="mailto:support@website.com" class="contact-link">
+                    <ion-icon name="mail-outline"></ion-icon>
+                  </a>
+                  <span>: support@website.com</span>
+                </li>
+                <li>
+                  <a href="#" class="contact-link">
+                    <ion-icon name="globe-outline"></ion-icon>
+                  </a>
+                  <span>: www.website.com</span>
+                </li>
+                <li>
+                  <a href="tel:+0011234567890" class="contact-link">
+                    <ion-icon name="call-outline"></ion-icon>
+                  </a>
+                  <span>: (+001) 123 456 7890</span>
+                </li>
+                <li>
+                  <div class="contact-link">
+                    <ion-icon name="time-outline"></ion-icon>
+                  </div>
+                  <span>: 9:00 AM - 6:00 PM</span>
+                </li>
+                <li>
+                  <a href="#" class="contact-link">
+                    <ion-icon name="location-outline"></ion-icon>
+                  </a>
+                  <address>
+                    : 1644 Deer Ridge Drive Rochelle Park, NJ 07662
+                  </address>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
       </article>
     </main>
 
