add basic html for footer

--- a/src/index.html
+++ b/src/index.html
@@ -469,6 +469,20 @@
       </article>
     </main>
 
+    <!-- Footer -->
+
+    <footer>
+      <div class="footer-top">
+        <div class="container">
+          <div class="footer-brand">
+            <a href="#" class="logo">
+              <img src="./assets/img/logo-footer.svg" alt=" Landio logo" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script src="./script.js"></script>
 
     <!--Ionicon-->
