--- a/src/index.html
+++ b/src/index.html
@@ -478,6 +478,34 @@
             <a href="#" class="logo">
               <img src="./assets/img/logo-footer.svg" alt=" Landio logo" />
             </a>
+
+            <p class="footer-text">
+              Cras ultricies mi eu turpis sit hendrerit fringilla vestibulum
+              ante ipsum primis in faucibus ultrices posuere cubilia.
+            </p>
+
+            <ul class="social-list">
+              <li>
+                <a href="#" class="social-link">
+                  <ion-icon name="logo-facebook"></ion-icon>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="social-link">
+                  <ion-icon name="logo-twitter"></ion-icon>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="social-link">
+                  <ion-icon name="logo-instagram"></ion-icon>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="social-link">
+                  <ion-icon name="logo-linkedin"></ion-icon>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
