--- a/src/index.html
+++ b/src/index.html
@@ -507,6 +507,41 @@
               </li>
             </ul>
           </div>
+
+          <div class="footer-link-box">
+            <ul class="footer-list">
+              <li>
+                <p class="footer-item-title">ABOUT US</p>
+              </li>
+
+              <li><a href="#" class="footer-link">Works</a></li>
+              <li><a href="#" class="footer-link">Strategy</a></li>
+              <li><a href="#" class="footer-link">Releases</a></li>
+              <li><a href="#" class="footer-link">Press</a></li>
+              <li><a href="#" class="footer-link">Mission</a></li>
+            </ul>
+            <ul class="footer-list">
+              <li>
+                <p class="footer-item-title">CUSTOMERS</p>
+              </li>
+
+              <li><a href="#" class="footer-link">Tranding</a></li>
+              <li><a href="#" class="footer-link">Popular</a></li>
+              <li><a href="#" class="footer-link">Customers</a></li>
+              <li><a href="#" class="footer-link">Features</a></li>
+            </ul>
+            <ul class="footer-list">
+              <li>
+                <p class="footer-item-title">SUPPORT</p>
+              </li>
+
+              <li><a href="#" class="footer-link">Developers</a></li>
+              <li><a href="#" class="footer-link">Support</a></li>
+              <li><a href="#" class="footer-link">Customer Service</a></li>
+              <li><a href="#" class="footer-link">Get Started</a></li>
+              <li><a href="#" class="footer-link">Guide</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
