--- a/src/index.html
+++ b/src/index.html
@@ -544,6 +544,13 @@
           </div>
         </div>
       </div>
+      <div class="footer-bottom">
+        <div class="container">
+          <p class="copyright">
+            &copy; 2022 <a href="#">codewithsadee</a>. All Right Reserved
+          </p>
+        </div>
+      </div>
     </footer>
 
     <script src="./script.js"></script>
