--- a/src/index.html
+++ b/src/index.html
@@ -419,6 +419,7 @@
                   name="message"
                   id="message"
                   class="input-field"
+                  placeholder="Type Your Message"
                   required
                 ></textarea>
 
